--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,11 @@
   text-anchor: middle;
   fill: white;
 }
+
+.chartWrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
